--- a/sklepspozywczy/pom.xml
+++ b/sklepspozywczy/pom.xml
@@ -15,6 +15,13 @@
 
 	<dependencies>
 
+		<!-- Backend -->
+		<dependency>
+			<groupId>net.ko</groupId>
+			<artifactId>sklepspozywczybackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<!-- JAVA EE API -->
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		<dependency>
@@ -39,7 +46,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
