--- a/sklepspozywczybackend/pom.xml
+++ b/sklepspozywczybackend/pom.xml
@@ -12,19 +12,31 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>5.1.3.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
+
+		<!-- SPRING -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- Junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
-	
+
 		<plugins>
 
 			<!-- Lastes java version -->
@@ -38,7 +50,7 @@
 			</plugin>
 
 		</plugins>
-		
+
 	</build>
 
 </project>
