--- a/sklepspozywczy/.settings/org.eclipse.core.resources.prefs
+++ b/sklepspozywczy/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/shared/navbar.jsp=UTF-8
+encoding//src/main/webapp/assets/css/fontello.css=UTF-8
